パスを相対パスから絶対パスに変更

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -12,23 +12,23 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../css/pages/home/style.css" />
+    <link rel="stylesheet" href="/css/pages/home/style.css" />
   </head>
 
   <body>
     <header>
       <div class="logo">
-        <a href="../home/index.html">
-        <img src="../../img/title_logo.webp" alt="" class="logo-icon" />
+        <a href="/pages/home/index.html">
+        <img src="/img/title_logo.webp" alt="" class="logo-icon" />
         </a>
         負けても泣かない大人の社交場
       </div>
       <nav>
-        <a href="../game/index.html">メニュー＆ゲーム</a>
-        <a href="../reviews/index.html">レビュー</a>
-        <a href="../access/index.html">交通アクセス</a>
+        <a href="/pages/game/index.html">メニュー＆ゲーム</a>
+        <a href="/pages/reviews/index.html">レビュー</a>
+        <a href="/pages/access/index.html">交通アクセス</a>
       </nav>
-      <a class="reserve-btn" href="../rentals/index.html">今すぐ予約</a>
+      <a class="reserve-btn" href="/pages/rentals/index.html">今すぐ予約</a>
     </header>
 
     <div class="hero">
@@ -51,7 +51,7 @@
       <div class="games">
         <div class="game-card">
           <span class="tag">戦略</span>
-          <img src="../../img/home_bodoge_katan.jpg" alt="" />
+          <img src="/img/home_bodoge_katan.jpg" alt="" />
           <div class="info">
             <strong>カタン</strong
             ><br />島を開拓し、資源を交換し勝利を目指す戦略ゲーム。
@@ -59,7 +59,7 @@
         </div>
         <div class="game-card">
           <span class="tag">ラッキ要素</span>
-          <img src="../../img/home_bodoge_dominion.jpg" alt="" />
+          <img src="/img/home_bodoge_dominion.jpg" alt="" />
           <div class="info">
             <strong>ドミニオン</strong
             ><br />カードを集め、デッキ構築で戦う名作。
@@ -67,7 +67,7 @@
         </div>
         <div class="game-card">
           <span class="tag">SF/冒険</span>
-          <img src="../../img/home_bodege_terahxo-ming.jpg" alt="" />
+          <img src="/img/home_bodege_terahxo-ming.jpg" alt="" />
           <div class="info">
             <strong>テラフォーミング・マーズ</strong
             ><br />火星を開拓する壮大な戦略ゲーム。
@@ -79,7 +79,7 @@
     <div class="reserve-banner">
       <h2>忘れられない夜を、今すぐ予約</h2>
       <p>最高のボードゲーム体験を、美味しいお食事とともに。</p>
-      <button onclick="location.href='../rentals/index.html'">
+      <button onclick="location.href='/pages/rentals/index.html'">
         席を予約する
       </button>
     </div>
