--- a/pages/Administrator/index.html
+++ b/pages/Administrator/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ボードゲーム貸し出し管理</title>
-    <link rel="stylesheet" href="../../css/pages/administrator/style.css">
+    <link rel="stylesheet" href="/css/pages/administrator/style.css">
 </head>
 <body>
 
