--- a/pages/access/index.html
+++ b/pages/access/index.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>アクセス＆お問い合わせ</title>
-  <link rel="stylesheet" href="../../css/pages/access/style.css">
+  <link rel="stylesheet" href="/css/pages/access/style.css">
 </head>
 <body>
 
 <header>
   <div class="logo">
-    <a href="../home/index.html">
-      <img src="../../img/title_logo.webp" alt="" class="logo-icon" />
+    <a href="/pages/home/index.html">
+      <img src="/img/title_logo.webp" alt="" class="logo-icon" />
     </a>
     負けても泣かない大人の社交場
   </div>
   <nav>
-    <a href="../game/index.html">メニュー＆ゲーム</a>
-    <a href="../reviews/index.html">レビュー</a>
-    <a href="../access/index.html">交通アクセス</a>
+    <a href="/pages/game/index.html">メニュー＆ゲーム</a>
+    <a href="/pages/reviews/index.html">レビュー</a>
+    <a href="/pages/access/index.html">交通アクセス</a>
   </nav>
-    <a class="reserve-btn" href="../rentals/index.html">今すぐ予約</a>
+    <a class="reserve-btn" href="/pages/rentals/index.html">今すぐ予約</a>
 </header>      
 
 <main class="contact-page">
@@ -147,15 +147,15 @@
         <div>
           <strong>Explore</strong>
           <a href="../home/index.html">ホーム</a>
-          <a href="../game/index.html">メニュー＆ゲーム</a>
-          <a href="../rentals/index.html">予約</a>
+          <a href="/pages/game/index.html">メニュー＆ゲーム</a>
+          <a href="/pages/rentals/index.html">予約</a>
         </div>
         <div>
           <strong>Resources</strong>
-          <a href="../reviews/index.html">レビュー</a>
-          <a href="../access/index.html">交通アクセス</a>
-          <a href="../regulations/index.html">利用規約</a>
-          <a href="../login/index.html">管理者ログイン</a>
+          <a href="/pages/reviews/index.html">レビュー</a>
+          <a href="/pages/access/index.html">交通アクセス</a>
+          <a href="/pages/regulations/index.html">利用規約</a>
+          <a href="/pages/login/index.html">管理者ログイン</a>
         </div>
         <div>
           <strong>Contact Us</strong>
