--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=/home/" />
+    <script>
+      window.location.replace("/pages/home/index.html");
+    </script>
     <title>Redirecting...</title>
   </head>
   <body>
