--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <script>
-      window.location.replace("/pages/home/index.html");
-    </script>
+    <meta http-equiv="refresh" content="0; url=/home/" />
     <title>Redirecting...</title>
   </head>
-  <body>
-    <p>Redirecting...</p>
-  </body>
 </html>
