Revert "パスを相対パスから絶対パスに変更"
This reverts commit 42866b2565e727cdd705f52c43ebf5ade4e5f89f.

--- a/pages/regulations/index.html
+++ b/pages/regulations/index.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8" />
   <title>利用規約｜Board Game Cafe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/css/pages/regulations/style.css" />
+  <link rel="stylesheet" href="../../css/pages/regulations/style.css" />
 </head>
 <body>
 
 <header>
     <div class="logo">
-      <a href="/pages/home/index.html">
-      <img src="/img/title_logo.webp" alt="" class="logo-icon" />
+      <a href="../home/index.html">
+      <img src="../../img/title_logo.webp" alt="" class="logo-icon" />
       </a>
       負けても泣かない大人の社交場
     </div>
     <nav>
-      <a href="/pages/game/index.html">メニュー＆ゲーム</a>
-      <a href="/pages/reviews/index.html">レビュー</a>
-      <a href="/pages/access/index.html">交通アクセス</a>
+      <a href="../game/index.html">メニュー＆ゲーム</a>
+      <a href="../reviews/index.html">レビュー</a>
+      <a href="../access/index.html">交通アクセス</a>
     </nav>
-    <a class="reserve-btn" href="/pages/rentals/index.html">今すぐ予約</a>
+    <a class="reserve-btn" href="../rentals/index.html">今すぐ予約</a>
   </header>
 
 <main class="container">
