--- a/pages/newlogin/index.html
+++ b/pages/newlogin/index.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>ボードゲームカフェ ログイン</title>
-  <link rel="stylesheet" href="/css/pages/newlogin/style.css">
+  <link rel="stylesheet" href="../../css/pages/newlogin/style.css">
 </head>
 <body>
   <header>
       <div class="logo">
-        <a href="/pages/home/index.html">
-        <img src="/img/title_logo.webp" alt="" class="logo-icon" />
+        <a href="../home/index.html">
+        <img src="../../img/title_logo.webp" alt="" class="logo-icon" />
         </a>
         負けても泣かない大人の社交場
       </div>
       <nav>
-        <a href="/pages/game/index.html">メニュー＆ゲーム</a>
-        <a href="/pages/reviews/index.html">レビュー</a>
-        <a href="/pages/access/index.html">交通アクセス</a>
+        <a href="../game/index.html">メニュー＆ゲーム</a>
+        <a href="../reviews/index.html">レビュー</a>
+        <a href="../access/index.html">交通アクセス</a>
       </nav>
-      <a class="reserve-btn" href="/pages/rentals/index.html">今すぐ予約</a>
+      <a class="reserve-btn" href="../rentals/index.html">今すぐ予約</a>
   </header>
 
   <div class="login-container">
