--- a/pages/rentals/index.html
+++ b/pages/rentals/index.html
@@ -150,6 +150,6 @@
         © 2025 Board Game Cafe Official Site. All rights reserved.
       </div>
     </footer>
-    
+    <script src="../../js/rentals.js"></script>
   </body>
 </html>
