共通処理をutilsに切り出した

--- a/frontend/pages/administrator/index.html
+++ b/frontend/pages/administrator/index.html
@@ -75,6 +75,8 @@
     <p>© 2026 Board Game Management</p>
 </footer>
 
+<script src="../../js/utils.js"></script>
+<script src="../../js/administrator.js"></script>
 </body>
 </html>
 
