--- a/frontend/pages/login/index.html
+++ b/frontend/pages/login/index.html
@@ -68,6 +68,7 @@
         © 2025 Board Game Cafe Official Site. All rights reserved.
       </div>
     </footer>
+    <script src="../../js/utils.js"></script>
     <script src="../../js/login.js"></script>
 </body>
 </html>
