--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -71,6 +71,7 @@
     </footer>
 
   <!-- ログイン処理スクリプト -->
+  <script src="../../js/utils.js"></script>
   <script src="../../js/login.js"></script>
 </body>
 </html>
